[gd_scene load_steps=22 format=3 uid="uid://dkre21e8af47i"]

[ext_resource type="Texture2D" uid="uid://c48c7fo8f60ul" path="res://assets/sprites/accesories/oil-canister.png" id="1_lrwvv"]
[ext_resource type="Script" path="res://scripts/accesories/oil-canister.gd" id="1_r07p2"]
[ext_resource type="AudioStream" uid="uid://4xsv457rdngg" path="res://assets/audio/accesories/canister/canister-damage-1.mp3" id="2_0m10h"]
[ext_resource type="Texture2D" uid="uid://c3shko63nrnlx" path="res://assets/sprites/accesories/oil-canister-lit.png" id="2_ild5y"]
[ext_resource type="AudioStream" uid="uid://c1oedcielpnej" path="res://assets/audio/accesories/canister/canister-damage-2.mp3" id="3_qfdt5"]
[ext_resource type="PackedScene" uid="uid://bw60ijk5yhl6r" path="res://scenes/tanks/bullet-death-particle.tscn" id="4_2yvri"]
[ext_resource type="AudioStream" uid="uid://dshknyqweyw2w" path="res://assets/audio/accesories/canister/canister-explode.mp3" id="5_cvpq2"]
[ext_resource type="AudioStream" uid="uid://byc3dtp7lmqhu" path="res://assets/audio/accesories/canister/canister-fuse.mp3" id="5_thmav"]
[ext_resource type="Script" path="res://scripts/helper-components/Shake2D.gd" id="9_3lc52"]
[ext_resource type="Script" path="res://scripts/helper-components/Audio2D.gd" id="10_bcbls"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vr873"]
size = Vector2(54, 35)

[sub_resource type="Animation" id="Animation_sbsbe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LitSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Oil-canister:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LitSprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.435294)]
}

[sub_resource type="Animation" id="Animation_v1eyp"]
resource_name = "fuse"
step = 0.04
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Oil-canister:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.739769, 0.000142311, 7.55653e-05, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LitSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28, 0.32, 0.36, 0.4, 0.44, 0.48, 0.52, 0.56, 0.6, 0.64, 0.68, 0.72, 0.76, 0.8, 0.84, 0.88, 0.92, 0.96, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LitSprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.28, 0.32, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.423529), Color(1, 1, 1, 0), Color(1, 1, 1, 0.760784)]
}

[sub_resource type="Animation" id="Animation_aif7n"]
resource_name = "hit"
length = 0.15
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LitSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4wn60"]
_data = {
"RESET": SubResource("Animation_sbsbe"),
"fuse": SubResource("Animation_v1eyp"),
"hit": SubResource("Animation_aif7n")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8rbni"]
size = Vector2(58, 114)

[sub_resource type="Curve" id="Curve_lits1"]
min_value = -200.0
max_value = 200.0
_data = [Vector2(0, 200), 0.0, 0.0, 0, 0, Vector2(1, -59.3407), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_3n0o8"]
interpolation_mode = 2
colors = PackedColorArray(1, 1, 1, 1, 0.305199, 0, 0.0399136, 1)

[sub_resource type="Curve" id="Curve_8aj26"]
min_value = -1.0
_data = [Vector2(0, 0.538462), 0.0, 0.0, 0, 0, Vector2(1, -0.560439), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_r0l8d"]
radius = 450.01

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_f1kol"]
polygon = PackedVector2Array(-27, -113, -27, -105, -30, -106, -30, -89, -27, -88, -27, -26, -30, -26, -30, -10, -20, -4, -7, -1, 7, 0, 20, -4, 30, -10, 30, -26, 27, -32, 27, -89, 30, -90, 30, -106, 27, -107, 27, -114, 16, -118, 5, -120, -7, -120, -20, -117)

[node name="OilCanister" type="StaticBody2D" node_paths=PackedStringArray("animation_player", "explosion_particles", "hit_zone", "explosion_shake", "hit_audio", "fuse_audio", "explosion_audio")]
z_index = 1
collision_layer = 3
collision_mask = 3
script = ExtResource("1_r07p2")
animation_player = NodePath("AnimationPlayer")
explosion_particles = NodePath("ExplosionParticles")
nodes_to_remove = [NodePath("Oil-canister"), NodePath("CollisionShape2D"), NodePath("Area2D")]
hit_zone = NodePath("HitZone")
explosion_shake = NodePath("Shake2D")
hit_audio = NodePath("HitAudio")
fuse_audio = NodePath("FuseAudio")
explosion_audio = NodePath("ExplosionAudio")
metadata/is_canister = true
metadata/bullet_target = true

[node name="Oil-canister" type="Sprite2D" parent="."]
position = Vector2(0, -60)
texture = ExtResource("1_lrwvv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -21.5)
shape = SubResource("RectangleShape2D_vr873")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4wn60")
}

[node name="LitSprite" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.435294)
position = Vector2(0, -60)
texture = ExtResource("2_ild5y")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2(0, -58)
shape = SubResource("RectangleShape2D_8rbni")

[node name="ExplosionParticles" parent="." instance=ExtResource("4_2yvri")]
z_index = 10
position = Vector2(0, -53)
emitting = false
amount = 48
lifetime = 1.0
initial_velocity_min = 2000.0
initial_velocity_max = 2000.0
linear_accel_min = -143.9
linear_accel_curve = SubResource("Curve_lits1")
damping_min = 16.327
damping_max = 100.0
scale_amount_min = 15.2
scale_amount_max = 174.74
color = Color(1, 0.516667, 0, 1)
color_ramp = SubResource("Gradient_3n0o8")
hue_variation_max = 0.15
hue_variation_curve = SubResource("Curve_8aj26")
script = null

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[node name="FuseTimer" type="Timer" parent="."]
one_shot = true

[node name="Body" type="Node2D" parent="."]

[node name="HitZone" type="Area2D" parent="."]
position = Vector2(0, -48)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitZone"]
visible = false
shape = SubResource("CircleShape2D_r0l8d")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="Shake2D" type="Node2D" parent="."]
script = ExtResource("9_3lc52")
shake_range = 2500
duration = 3.0
one_shot = true
intensity_decay = 10.0
external = true

[node name="HitAudio" type="AudioStreamPlayer2D" parent="."]
volume_db = 5.0
script = ExtResource("10_bcbls")
sounds = Array[AudioStream]([ExtResource("2_0m10h"), ExtResource("3_qfdt5")])

[node name="FuseAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_thmav")
volume_db = -3.0
script = ExtResource("10_bcbls")

[node name="ExplosionAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_cvpq2")
volume_db = 4.0
script = ExtResource("10_bcbls")
external = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_f1kol")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="FuseTimer" to="." method="_on_fuse_timer_timeout"]
